force-app/main/default/objects/employee__c/fields/college__c.field-meta.xml
<CustomField>
    <fullName>college__c</fullName>
    <description>college name</description>
    <inlineHelpText>college name</inlineHelpText>
    <label>college</label>
    <length>100</length>
    <type>Text</type>
</CustomField>