force-app/main/default/objects/employee__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Date of birth</description>
    <inlineHelpText>enter date</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>