force-app/main/default/objects/employee__c/fields/manager__c.field-meta.xml
<CustomField>
    <fullName>manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>manager</label>
    <referenceTo>manager__c</referenceTo>
    <relationshipLabel>employees</relationshipLabel>
    <relationshipName>employees</relationshipName>
    <type>Lookup</type>
</CustomField>