force-app/main/default/objects/employee__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>salary</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>