force-app/main/default/objects/employee__c/fields/skill_set__c.field-meta.xml
<CustomField>
    <fullName>skill_set__c</fullName>
    <label>skill-set</label>
    <length>10</length>
    <type>Text</type>
</CustomField>