force-app/main/default/objects/employee__c/listViews/Experienced_employees.listView-meta.xml
<ListView>
    <fullName>Experienced_employees</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>employee__c.Experienced</value>
    </filters>
    <label>Experienced employees</label>
</ListView>