force-app/main/default/objects/employee__c/listViews/Trainees.listView-meta.xml
<ListView>
    <fullName>Trainees</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DOB__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>salary__c</columns>
    <columns>skill_set__c</columns>
    <columns>stipend__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>employee__c.Trainee</value>
    </filters>
    <label>Trainees</label>
</ListView>